argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocdserver
  namespace: argocd
  annotations:
    cert-manager.io/issuer: "4t2labs"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "argocd.portalk8slabs.4t2.no"
    secretName: portalk8slabs
  rules:
  - host: "argocd.portalk8slabs.4t2.no"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
